--- a/week1/experiment_tracking.ipynb
+++ b/week1/experiment_tracking.ipynb
@@ -20,19 +20,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install torch transformers lightning datasets wandb evaluate ipywidgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCannot execute code, session has been disposed. Please try restarting the Kernel. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
    "source": [
-    "%pip install -q --upgrade torch transformers lightning datasets wandb evaluate ipywidgets"
+    "1+1"
    ]
   },
   {
@@ -48,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +148,9 @@
     "\n",
     "        self.text_fields = self.task_text_field_map[task_name]\n",
     "        self.num_labels = self.glue_task_num_labels[task_name]\n",
-    "        self.tokenizer = AutoTokenizer.from_pretrained(self.model_name_or_path, use_fast=True)\n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(\n",
+    "            self.model_name_or_path, use_fast=True\n",
+    "        )\n",
     "\n",
     "    def setup(self, stage: str):\n",
     "        self.dataset = datasets.load_dataset(\"glue\", self.task_name)\n",
@@ -140,7 +161,9 @@
     "                batched=True,\n",
     "                remove_columns=[\"label\"],\n",
     "            )\n",
-    "            self.columns = [c for c in self.dataset[split].column_names if c in self.loader_columns]\n",
+    "            self.columns = [\n",
+    "                c for c in self.dataset[split].column_names if c in self.loader_columns\n",
+    "            ]\n",
     "            self.dataset[split].set_format(type=\"torch\", columns=self.columns)\n",
     "\n",
     "        self.eval_splits = [x for x in self.dataset.keys() if \"validation\" in x]\n",
@@ -150,30 +173,48 @@
     "        AutoTokenizer.from_pretrained(self.model_name_or_path, use_fast=True)\n",
     "\n",
     "    def train_dataloader(self):\n",
-    "        return DataLoader(self.dataset[\"train\"], batch_size=self.train_batch_size, shuffle=True)\n",
+    "        return DataLoader(\n",
+    "            self.dataset[\"train\"], batch_size=self.train_batch_size, shuffle=True\n",
+    "        )\n",
     "\n",
     "    def val_dataloader(self):\n",
     "        if len(self.eval_splits) == 1:\n",
-    "            return DataLoader(self.dataset[\"validation\"], batch_size=self.eval_batch_size)\n",
+    "            return DataLoader(\n",
+    "                self.dataset[\"validation\"], batch_size=self.eval_batch_size\n",
+    "            )\n",
     "        elif len(self.eval_splits) > 1:\n",
-    "            return [DataLoader(self.dataset[x], batch_size=self.eval_batch_size) for x in self.eval_splits]\n",
+    "            return [\n",
+    "                DataLoader(self.dataset[x], batch_size=self.eval_batch_size)\n",
+    "                for x in self.eval_splits\n",
+    "            ]\n",
     "\n",
     "    def test_dataloader(self):\n",
     "        if len(self.eval_splits) == 1:\n",
     "            return DataLoader(self.dataset[\"test\"], batch_size=self.eval_batch_size)\n",
     "        elif len(self.eval_splits) > 1:\n",
-    "            return [DataLoader(self.dataset[x], batch_size=self.eval_batch_size) for x in self.eval_splits]\n",
+    "            return [\n",
+    "                DataLoader(self.dataset[x], batch_size=self.eval_batch_size)\n",
+    "                for x in self.eval_splits\n",
+    "            ]\n",
     "\n",
     "    def convert_to_features(self, example_batch, indices=None):\n",
     "        # Either encode single sentence or sentence pairs\n",
     "        if len(self.text_fields) > 1:\n",
-    "            texts_or_text_pairs = list(zip(example_batch[self.text_fields[0]], example_batch[self.text_fields[1]]))\n",
+    "            texts_or_text_pairs = list(\n",
+    "                zip(\n",
+    "                    example_batch[self.text_fields[0]],\n",
+    "                    example_batch[self.text_fields[1]],\n",
+    "                )\n",
+    "            )\n",
     "        else:\n",
     "            texts_or_text_pairs = example_batch[self.text_fields[0]]\n",
     "\n",
     "        # Tokenize the text/text pairs\n",
     "        features = self.tokenizer.batch_encode_plus(\n",
-    "            texts_or_text_pairs, max_length=self.max_seq_length, pad_to_max_length=True, truncation=True\n",
+    "            texts_or_text_pairs,\n",
+    "            max_length=self.max_seq_length,\n",
+    "            pad_to_max_length=True,\n",
+    "            truncation=True,\n",
     "        )\n",
     "\n",
     "        # Rename label to labels to make it easier to pass to model forward\n",
@@ -207,10 +248,16 @@
     "\n",
     "        self.save_hyperparameters()\n",
     "\n",
-    "        self.config = AutoConfig.from_pretrained(model_name_or_path, num_labels=num_labels)\n",
-    "        self.model = AutoModelForSequenceClassification.from_pretrained(model_name_or_path, config=self.config)\n",
+    "        self.config = AutoConfig.from_pretrained(\n",
+    "            model_name_or_path, num_labels=num_labels\n",
+    "        )\n",
+    "        self.model = AutoModelForSequenceClassification.from_pretrained(\n",
+    "            model_name_or_path, config=self.config\n",
+    "        )\n",
     "        self.metric = evaluate.load(\n",
-    "            \"glue\", self.hparams.task_name, experiment_id=datetime.now().strftime(\"%d-%m-%Y_%H-%M-%S\")\n",
+    "            \"glue\",\n",
+    "            self.hparams.task_name,\n",
+    "            experiment_id=datetime.now().strftime(\"%d-%m-%Y_%H-%M-%S\"),\n",
     "        )\n",
     "\n",
     "        self.validation_step_outputs = []\n",
@@ -233,7 +280,9 @@
     "            preds = logits.squeeze()\n",
     "\n",
     "        labels = batch[\"labels\"]\n",
-    "        self.validation_step_outputs.append({\"loss\": val_loss, \"preds\": preds, \"labels\": labels})\n",
+    "        self.validation_step_outputs.append(\n",
+    "            {\"loss\": val_loss, \"preds\": preds, \"labels\": labels}\n",
+    "        )\n",
     "        return val_loss\n",
     "\n",
     "    def on_validation_epoch_end(self):\n",
@@ -246,17 +295,32 @@
     "                loss = torch.stack([x[\"loss\"] for x in output]).mean()\n",
     "                self.log(f\"val_loss_{split}\", loss, prog_bar=True)\n",
     "                split_metrics = {\n",
-    "                    f\"{k}_{split}\": v for k, v in self.metric.compute(predictions=preds, references=labels).items()\n",
+    "                    f\"{k}_{split}\": v\n",
+    "                    for k, v in self.metric.compute(\n",
+    "                        predictions=preds, references=labels\n",
+    "                    ).items()\n",
     "                }\n",
     "                self.log_dict(split_metrics, prog_bar=True)\n",
     "            self.validation_step_outputs.clear()\n",
     "            return loss\n",
     "\n",
-    "        preds = torch.cat([x[\"preds\"] for x in self.validation_step_outputs]).detach().cpu().numpy()\n",
-    "        labels = torch.cat([x[\"labels\"] for x in self.validation_step_outputs]).detach().cpu().numpy()\n",
+    "        preds = (\n",
+    "            torch.cat([x[\"preds\"] for x in self.validation_step_outputs])\n",
+    "            .detach()\n",
+    "            .cpu()\n",
+    "            .numpy()\n",
+    "        )\n",
+    "        labels = (\n",
+    "            torch.cat([x[\"labels\"] for x in self.validation_step_outputs])\n",
+    "            .detach()\n",
+    "            .cpu()\n",
+    "            .numpy()\n",
+    "        )\n",
     "        loss = torch.stack([x[\"loss\"] for x in self.validation_step_outputs]).mean()\n",
     "        self.log(\"val_loss\", loss, prog_bar=True)\n",
-    "        self.log_dict(self.metric.compute(predictions=preds, references=labels), prog_bar=True)\n",
+    "        self.log_dict(\n",
+    "            self.metric.compute(predictions=preds, references=labels), prog_bar=True\n",
+    "        )\n",
     "        self.validation_step_outputs.clear()\n",
     "\n",
     "    def configure_optimizers(self):\n",
@@ -265,15 +329,27 @@
     "        no_decay = [\"bias\", \"LayerNorm.weight\"]\n",
     "        optimizer_grouped_parameters = [\n",
     "            {\n",
-    "                \"params\": [p for n, p in model.named_parameters() if not any(nd in n for nd in no_decay)],\n",
+    "                \"params\": [\n",
+    "                    p\n",
+    "                    for n, p in model.named_parameters()\n",
+    "                    if not any(nd in n for nd in no_decay)\n",
+    "                ],\n",
     "                \"weight_decay\": self.hparams.weight_decay,\n",
     "            },\n",
     "            {\n",
-    "                \"params\": [p for n, p in model.named_parameters() if any(nd in n for nd in no_decay)],\n",
+    "                \"params\": [\n",
+    "                    p\n",
+    "                    for n, p in model.named_parameters()\n",
+    "                    if any(nd in n for nd in no_decay)\n",
+    "                ],\n",
     "                \"weight_decay\": 0.0,\n",
     "            },\n",
     "        ]\n",
-    "        optimizer = torch.optim.AdamW(optimizer_grouped_parameters, lr=self.hparams.learning_rate, eps=self.hparams.adam_epsilon)\n",
+    "        optimizer = torch.optim.AdamW(\n",
+    "            optimizer_grouped_parameters,\n",
+    "            lr=self.hparams.learning_rate,\n",
+    "            eps=self.hparams.adam_epsilon,\n",
+    "        )\n",
     "\n",
     "        scheduler = get_linear_schedule_with_warmup(\n",
     "            optimizer,\n",
@@ -281,7 +357,7 @@
     "            num_training_steps=self.trainer.estimated_stepping_batches,\n",
     "        )\n",
     "        scheduler = {\"scheduler\": scheduler, \"interval\": \"step\", \"frequency\": 1}\n",
-    "        return [optimizer], [scheduler]\n"
+    "        return [optimizer], [scheduler]"
    ]
   },
   {
@@ -311,8 +387,6 @@
     "        accelerator=\"auto\",\n",
     "        devices=1,\n",
     "        logger=logger,\n",
-    "        limit_train_batches=2,\n",
-    "        limit_val_batches=2,\n",
     "    )\n",
     "    trainer.fit(model, datamodule=dm)"
    ]
@@ -352,6 +426,7 @@
    "outputs": [],
    "source": [
     "import wandb\n",
+    "\n",
     "wandb.login()"
    ]
   },
@@ -386,7 +461,9 @@
    "source": [
     "from lightning.pytorch.loggers import WandbLogger\n",
     "\n",
-    "wandb_logger = WandbLogger(project=\"experiment-tracking-exercise\")  # TODO: use your project name from above"
+    "wandb_logger = WandbLogger(\n",
+    "    project=\"experiment-tracking-exercise\"\n",
+    ")  # TODO: use your project name from above"
    ]
   },
   {
@@ -449,21 +526,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.5"
   }
  },
  "nbformat": 4,
