--- a/proj1/classifier.ipynb
+++ b/proj1/classifier.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project 1: Reading comprehension\n"
+    "# Project 1: Reading comprehension\n",
+    "\n"
    ]
   },
   {
@@ -13,7 +14,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "\n",
+    "Tutorial: https://lightning.ai/docs/pytorch/stable/starter/introduction.html#\n",
     "\n",
     "W&B Link: TODO"
    ]
@@ -26,9 +27,10 @@
     "\n",
     "## Dependencies\n",
     "Install all necessary dependencies\n",
-    "- PyTorch: `torch`\n",
+    "- PyTorch: `torch lightning`\n",
     "- Hugging Face: `huggingface_hub datasets`\n",
     "- Weights & Biases: `wandb`\n",
+    "- nltk: `nltk`\n",
     "\n",
     "Optional\n",
     "- Lint and Formatting: `ruff`\n",
@@ -36,7 +38,11 @@
     "Dependencies are pinned to the version the code was created with. \n",
     "\n",
     "## Notebook setup\n",
-    "Log into Hugging Face and Weights & Biases.\n"
+    "Log into Hugging Face and Weights & Biases.\n",
+    "\n",
+    "## Tools used\n",
+    "- Visual Studio Code\n",
+    "- GitHub Copilot"
    ]
   },
   {
@@ -78,8 +84,27 @@
     "\n",
     "Predefined requirements:\n",
     "- Train / Validation / Test split\n",
+    "- Existing word embedding model: word2vec, GloVe, fastText\n",
     "\n",
-    "Download the BoolQ dataset and split it in the predefined way."
+    "Download the BoolQ dataset with `datasets` and split it in the predefined way.\n",
+    "\n",
+    "Data treatment steps:\n",
+    "- Tokenize\n",
+    "- Lower case\n",
+    "- Stop word removal\n",
+    "- lemmatization \n",
+    "- truncating of passage (enforce maximum length, ~99% not truncated)\n",
+    "- Embedding with fasttext\n",
+    "\n",
+    "Used features: `question`, `answer`, `passage` (all of them)\n",
+    "\n",
+    "Input format: `question` and `passage` vectors\n",
+    "Label format: `answer` 1 or 0\n",
+    "\n",
+    "Batching: None, dataset is small enough (6.5k rows in train)\n",
+    "\n",
+    "Correctness tests:\n",
+    "Check texts before embedding if they still make sense "
    ]
   },
   {
@@ -90,7 +115,11 @@
    "source": [
     "from datasets import load_dataset\n",
     "\n",
-    "ds = load_dataset(\"google/boolq\")"
+    "train = load_dataset(\"google/boolq\", split=\"train[:-1000]\")\n",
+    "valid = load_dataset(\"google/boolq\", split=\"train[-1000:]\")\n",
+    "test = load_dataset(\"google/boolq\", split=\"validation\")\n",
+    "\n",
+    "print(len(train), len(valid), len(test))"
    ]
   },
   {
@@ -107,14 +136,41 @@
     "# Model\n",
     "\n",
     "Predefined requirements:\n",
-    "- Existing word embedding: word2vec, GloVe, fastText\n",
     "- Classifier\n",
     "    - 2 Layers\n",
     "    - ReLu\n",
     "\n",
-    "Define PyTorch model with needed layers\n",
+    "network architecture\n",
+    "- input layer\n",
+    "    - dim: max len of input x 2\n",
+    "- 2 hidden layers\n",
+    "    - 0.5 * max x 2\n",
+    "    - ReLu activation\n",
+    "- output layer\n",
+    "    - output of class (1 true, 0 false)\n",
+    "        - dim: 1x1\n",
+    "        - not probability output because the question should be answered with yes or no, not 60% yes\n",
+    "    - sigmoid activation\n",
+    "- normalization: done in preprocessing\n",
+    "- regularization: done by optimizer\n",
     "\n",
-    "Transform dataset texts with word embedding model"
+    "Loss function either:\n",
+    "- HingeEmbeddingLoss: measures whether two inputs are similar or not\n",
+    "- Binary Cross-Entropy: separate to classes\n",
+    "Optimizer either:\n",
+    "- Adam: good default choice\n",
+    "- AdamW: supposed improvements to Adam\n",
+    "\n",
+    "Experiments:\n",
+    "- Different Loss and Optimizer combiniations\n",
+    "- Size of input & hidden layers\n",
+    "- Epochs, Learning rate \n",
+    "\n",
+    "Checkpoints: every few epochs \n",
+    "early stops: if loss does not improve\n",
+    "\n",
+    "correctness test:\n",
+    "?"
    ]
   },
   {
@@ -131,6 +187,8 @@
     "# Training\n",
     "\n",
     "Initialize Weights & Biases project for the project\n",
+    "\n",
+    "Use k fold cross validation to avoid overfitting\n",
     "\n",
     "1. Define experiement with different hyperparameters\n",
     "2. Train model with train dataset split\n",
@@ -154,8 +212,12 @@
    "source": [
     "# Evaluation\n",
     "\n",
-    "Run evaluation of final model with test dataset split.\n",
-    "Only at the very end, otherwise data leakage can happen."
+    "Metrics:\n",
+    "- F1 Score\n",
+    "- AOC\n",
+    "Averaging: ?\n",
+    "Error analysis:\n",
+    "- Confusion matrix"
    ]
   },
   {
@@ -171,7 +233,11 @@
    "source": [
     "# Interpretation\n",
     "\n",
-    "Compare results of final model to expectations"
+    "Compare results of final model to expectations.\n",
+    "Run evaluation of final model with test dataset split.\n",
+    "But only at the very end, otherwise data leakage can happen.\n",
+    "\n",
+    "Expectation: 70% accuracy with test dataset."
    ]
   }
  ],
