--- a/week1/pytorch.ipynb
+++ b/week1/pytorch.ipynb
@@ -15,10 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "15a1efca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "thinc 8.2.5 requires numpy<2.0.0,>=1.19.0; python_version >= \"3.9\", but you have numpy 2.1.1 which is incompatible.\n",
+      "numba 0.60.0 requires numpy<2.1,>=1.22, but you have numpy 2.1.1 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install -q -U numpy\n",
     "%pip install -q torch ipywidgets"
@@ -26,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2c05320f",
    "metadata": {},
    "outputs": [],
@@ -58,11 +70,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c90229fe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 2],\n",
+      "        [3, 4]])\n",
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "tensor([[1, 2],\n",
+      "        [3, 4]])\n",
+      "tensor([[5, 2],\n",
+      "        [3, 4]])\n",
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "tensor([[5, 2],\n",
+      "        [3, 4]])\n",
+      "[[6 2]\n",
+      " [3 4]]\n",
+      "tensor([[0., 0.],\n",
+      "        [0., 0.]])\n",
+      "tensor([[1., 1.],\n",
+      "        [1., 1.]])\n",
+      "tensor([[0.8505, 0.1239],\n",
+      "        [0.3334, 0.0039]])\n",
+      "torch.Size([2, 2]) torch.int64 cpu\n",
+      "Device tensor is stored on: cuda:0\n",
+      "tensor([[8, 8],\n",
+      "        [3, 4]], device='cuda:0')\n",
+      "tensor([[9, 8],\n",
+      "        [9, 4]], device='cuda:0')\n",
+      "tensor([[9, 8],\n",
+      "        [9, 4],\n",
+      "        [9, 8],\n",
+      "        [9, 4]], device='cuda:0')\n",
+      "tensor([[[9, 8],\n",
+      "         [9, 4]],\n",
+      "\n",
+      "        [[9, 8],\n",
+      "         [9, 4]]], device='cuda:0')\n",
+      "tensor([[81, 64],\n",
+      "        [81, 16]], device='cuda:0')\n",
+      "tensor([[153, 104],\n",
+      "        [117,  88]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "base = [[1, 2], [3, 4]]\n",
+    "tensor = torch.tensor(base)\n",
+    "ndarr = np.array(base)\n",
+    "print(tensor)\n",
+    "print(ndarr)\n",
+    "\n",
+    "print(tensor.numpy())\n",
+    "print(torch.from_numpy(ndarr))\n",
+    "\n",
+    "tensor[0,0] = 5\n",
+    "print(tensor)\n",
+    "print(ndarr)\n",
+    "ndarr[0,0] = 6\n",
+    "print(tensor)\n",
+    "print(ndarr)\n",
+    "\n",
+    "print(torch.zeros(tensor.shape))\n",
+    "print(torch.ones(tensor.shape))\n",
+    "print(torch.rand(tensor.shape))\n",
+    "\n",
+    "print(tensor.shape, tensor.dtype, tensor.device)\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "  tensor = tensor.to('cuda')\n",
+    "  print(f\"Device tensor is stored on: {tensor.device}\")\n",
+    "\n",
+    "tensor[0] = 8\n",
+    "print(tensor)\n",
+    "tensor[:, 0] = 9\n",
+    "print(tensor)\n",
+    "\n",
+    "print(torch.cat([tensor, tensor]))\n",
+    "print(torch.stack([tensor, tensor]))\n",
+    "\n",
+    "print(tensor * tensor)\n",
+    "tensor = tensor.to(\"cpu\")\n",
+    "print(tensor @ tensor)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a5284525",
    "metadata": {},
    "outputs": [],
@@ -89,11 +187,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e66e191c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Network(nn.Module):\n",
+    "    def __init__(self, input_dim=16, output_dim=16, hidden_dim=16):\n",
+    "        super().__init__()\n",
+    "        self.fc1 = nn.Linear(input_dim, hidden_dim)\n",
+    "        self.fc2 = nn.Linear(hidden_dim, output_dim)\n",
+    "    def forward(self, data):\n",
+    "        output = self.fc1(data)\n",
+    "        output = nn.functional.relu(output)\n",
+    "        output = self.fc2(output)\n",
+    "        return output\n",
+    "net = Network()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,11 +215,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "77e3383e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Network(\n",
+      "  (fc1): Linear(in_features=16, out_features=16, bias=True)\n",
+      "  (fc2): Linear(in_features=16, out_features=16, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(net)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,11 +244,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f3370725",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "out = net(torch.rand(1,16))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,11 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bd1983de",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "criterion = nn.MSELoss()\n",
+    "target = torch.rand(1, 16)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,11 +281,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "53d5cc3b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.3040, grad_fn=<MseLossBackward0>)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss = criterion(out, target)\n",
+    "loss"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,11 +311,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4fe16c21",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "net.zero_grad()\n",
+    "loss.backward()\n",
+    "learning_rate = 0.01\n",
+    "for f in net.parameters():\n",
+    "    f.data.sub_(f.grad.data * learning_rate)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -185,8 +333,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "054db4ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.optim as optim\n",
+    "\n",
+    "# create your optimizer\n",
+    "optimizer = optim.Adam(net.parameters(), lr=0.01)\n",
+    "\n",
+    "# in your training loop:\n",
+    "optimizer.zero_grad()   # zero the gradient buffers\n",
+    "output = net(torch.rand(1,16))\n",
+    "loss = criterion(output, target)\n",
+    "loss.backward()\n",
+    "optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e25484f-3f47-4bea-832a-9d19ebfd0f03",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -208,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
