--- a/proj4/project4-stage1.ipynb
+++ b/proj4/project4-stage1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project 3: Transformer BoolQ\n",
+    "# Project 4: Pretrained Transformer BoolQ\n",
     "\n",
     "The documentation is split into small chunks following the suggestion in class and from feedback for previous projects."
    ]
@@ -15,7 +15,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Classification of BoolQ with Transformers.\n",
+    "Classification of BoolQ with Pretrained Transformers.\n",
     "\n",
     "\n",
     "W&B Link: TODO"
